家里一个版本

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+zuul.routes.article.path=/article/**
+zuul.routes.article.serviceId=article
 
+ribbon.eureka.enabled=false
+article.ribbon.listOfServers=http://localhost:2101/
+# 如访问http://localhost:1101/article/consumer 实际上访问  http://localhost:2101/consumer
