--- a/eureka-consumer-feign/pom.xml
+++ b/eureka-consumer-feign/pom.xml
@@ -38,6 +38,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
