--- a/eureka-consumer-feign/src/main/resources/application.properties
+++ b/eureka-consumer-feign/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=eureka-consumer-fe
+spring.application.name=eureka-consumer-feign
 server.port=2101
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
